--- a/anniv4.html
+++ b/anniv4.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container4">
         <div class="gifpage4">
-            <a href="anniv.html">
+            <a href="index.html">
                 <img src="https://media.tenor.com/bkA2JqxxfGwAAAAi/mlbb-jjk-jjk-mlbb.gif" width="350" height="300">
             </a>
         </div>
