--- a/anniv2.html
+++ b/anniv2.html
@@ -20,7 +20,7 @@
         </div>
         <div class="btns-end2">
             <div class="btns-back2">
-                <a href="anniv.html">Back</a>
+                <a href="index.html">Back</a>
             </div>
             <div class="btns-next2">
                 <a href="anniv3.html">Next</a>
