--- a/anniv2.html
+++ b/anniv2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href= "css/anniv2.css">
+    <link rel="shortcut icon" href="anniv photo/pngwing.com.png" type="image/x-icon">
     <title>A Letter to Beautiful girl.</title>
 </head>
 <body>
